force-app/main/default/objects/Expense_Claim_Line_Item__c/Expense_Claim_Line_Item__c.object-meta.xml
<CustomObject>
    <label>Expense Claim Line Item</label>
    <nameField>
        <displayFormat>ECLI-{000000}</displayFormat>
        <label>Expense Claim Line Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expense Claim Line Item</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>