force-app/main/default/objects/Expense_Claim_Line_Item__c/fields/Actual_Distance__c.field-meta.xml
<CustomField>
    <fullName>Actual_Distance__c</fullName>
    <formula>Mill_Planner__r.Day_Planner__r.Actual_Distance__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Distance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>