force-app/main/default/objects/Expense_Claim_Line_Item__c/fields/Amounts__c.field-meta.xml
<CustomField>
    <fullName>Amounts__c</fullName>
    <formula>Distance_Travelled_in_Kms__c * 
    IF(
        ISPICKVAL(Rate_per_Unit__c, &quot;3.5&quot;), 3.5,
        IF(
            ISPICKVAL(Rate_per_Unit__c, &quot;8&quot;), 8,
                                    0  /* Default value if Rate_per_Unit__c doesn&apos;t match any specified values */
                                )
                            )</formula>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>