force-app/main/default/objects/Expense_Claim_Line_Item__c/fields/Claim_Date__c.field-meta.xml
<CustomField>
    <fullName>Claim_Date__c</fullName>
    <formula>Expense_Claim__r.Expense_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Claim Date</label>
    <type>Date</type>
</CustomField>