force-app/main/default/objects/Expense_Claim_Line_Item__c/fields/Description_of_Claim__c.field-meta.xml
<CustomField>
    <fullName>Description_of_Claim__c</fullName>
    <label>Description of Claim</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>