force-app/main/default/objects/Expense_Claim_Line_Item__c/fields/Distance_Travelled_in_Kms__c.field-meta.xml
<CustomField>
    <fullName>Distance_Travelled_in_Kms__c</fullName>
    <label>Distance Travelled (in Kms)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>