force-app/main/default/objects/Expense_Claim_Line_Item__c/fields/Expense_Type__c.field-meta.xml
<CustomField>
    <fullName>Expense_Type__c</fullName>
    <label>Expense_Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Meal</fullName>
            </value>
            <value>
                <fullName>Travel</fullName>
            </value>
            <value>
                <fullName>Miscellaneous &amp; Other</fullName>
            </value>
            <value>
                <fullName>Accomodation</fullName>
            </value>
            <value>
                <fullName>Fuel</fullName>
                <isActive>false</isActive>
                <label>Fuel</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>