force-app/main/default/objects/Expense_Claim_Line_Item__c/fields/From__c.field-meta.xml
<CustomField>
    <fullName>From__c</fullName>
    <label>From</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>