force-app/main/default/objects/Expense_Claim_Line_Item__c/fields/Mill_Planner__c.field-meta.xml
<CustomField>
    <fullName>Mill_Planner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Mill Planner</label>
    <referenceTo>Mill_Planner__c</referenceTo>
    <relationshipLabel>Expense Claim Line Item</relationshipLabel>
    <relationshipName>Expense_Claim_Line_Item</relationshipName>
    <type>Lookup</type>
</CustomField>