force-app/main/default/objects/Expense_Claim_Line_Item__c/fields/Mode_of_Transport__c.field-meta.xml
<CustomField>
    <fullName>Mode_of_Transport__c</fullName>
    <label>Mode of Transport</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Auto</fullName>
            </value>
            <value>
                <fullName>Two Wheeler</fullName>
            </value>
            <value>
                <fullName>Bus</fullName>
            </value>
            <value>
                <fullName>Own Car</fullName>
            </value>
            <value>
                <fullName>Train</fullName>
            </value>
            <value>
                <fullName>Company Car</fullName>
            </value>
            <value>
                <fullName>Dealer Car</fullName>
                <label>Dealer Car/Two Wheeler</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>