force-app/main/default/objects/Expense_Claim_Line_Item__c/fields/Rate_per_Unit__c.field-meta.xml
<CustomField>
    <fullName>Rate_per_Unit__c</fullName>
    <label>Rate per Unit</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Mode_of_Transport__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>3.5</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>