force-app/main/default/objects/Expense_Claim_Line_Item__c/fields/To__c.field-meta.xml
<CustomField>
    <fullName>To__c</fullName>
    <label>To</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>