force-app/main/default/objects/Expense_Claim_Line_Item__c/recordTypes/Fuel.recordType-meta.xml
<RecordType>
    <fullName>Fuel</fullName>
    <active>false</active>
    <label>Fuel</label>
</RecordType>