force-app/main/default/objects/Expense_Claim_Line_Item__c/recordTypes/Miscellaneous_Other.recordType-meta.xml
<RecordType>
    <fullName>Miscellaneous_Other</fullName>
    <active>true</active>
    <label>Miscellaneous &amp; Other</label>
</RecordType>